# DD4hep

./: CMakeLists.txt
DDCore/include/DD4hep/: Objects.h  dd4hep.h
DDCore/src/: Objects.cpp
DDExamples/CLICSiD/compact/: calorimeterTest.xml
DDExamples/CLICSiD/include/: BarrelDetector.h  BarrelDetectorData.h  Calorimeter.h  CalorimeterData.h  LayerData.h  LayerStack.h  LayeredSubdetector.h  PolyhedralBarrelCalorimeter.h  PolyhedralDetector.h
DDExamples/CLICSiD/src/: CylindricalBarrelCalorimeter_geo.cpp  CylindricalEndcapCalorimeter_geo.cpp  EcalBarrel_geo.cpp  LayerStack.cpp  LayeredSubdetector.cpp  PolyhedraBarrelCalorimeter2_geo.cpp  PolyhedraEndcapCalorimeter2_geo.cpp
DDExamples/CLICSiDReco/: CMakeLists.txt
DDExamples/CLICSiDReco/src/: CLICSiDCalorimeterReco.cpp  TGeoTest.cpp
DDExamples/ILDExDet/: CMakeLists.txt
DDExamples/ILDExDet/include/: DD4hepExceptions.h  FixedPadAngleDiskLayout.h  PadLayout.h  RectangularPadRowLayout.h  TPCModule.h  VersatileDiskRowLayout.h
DDExamples/ILDExReco/: CMakeLists.txt  ILDExReco.cpp  RecoLP1.cpp  RecoTPCPrototype.cpp  TPCHitReco.cpp  TestVersatileLayout.cpp
DDExamples/ILDExTest/: CMakeLists.txt  TestILDTPC.cpp  TestTPCPrototype.cpp
DDG4/plugins/: Geant4SDActions.cpp
DDSegmentation/: CMakeLists.txt
DDSegmentation/include/: CartesianSegmentation.h  CartesianXYSegmentation.h  CartesianXYZSegmentation.h  DetectorIDDecoder.h  Segmentation.h
DDSegmentation/src/: CartesianSegmentation.cpp  CartesianXYSegmentation.cpp  CartesianXYZSegmentation.cpp  Segmentation.cpp
UtilityApps/src/: test_cellid_position_converter.cpp
(+5 files in other folders)
